5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1577_2896.log
== TEST (2019-03-17 17:22:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Carolina")

# Impressao de saidas
print()
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:22:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Carolina")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.129602
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:22:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas
print()
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:22:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.127314
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:22:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas
print(input)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:22:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas
print(input)
-- EXECUTION TIME:
0.218917
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
<built-in function input>
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:23:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Maristela")

# Impressao de saidas
print(input)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:23:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Maristela")

# Impressao de saidas
print(input)
-- EXECUTION TIME:
0.154451
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
<built-in function input>
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:23:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Maristela")

# Impressao de saidas
print(input)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:24:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Digite o nome: "Maristela")

# Impressao de saidas
print(input)
-- ERROR:
File "XXXX", line 4
    var = input(Digite o nome: "Maristela")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:24:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print(input)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 17:25:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:25:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Python")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.162971
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
